Add Bootstrap Icons and implement speech recognition feature in AI Assistant.

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/web.config"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
