--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "src/styles.css"
              
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
